# basic-rpg

./: .gitmodules  CMakeLists.txt  README.md
assets/sprites/monsters/: birdo.json
assets/sprites/player/: down.json  idle.json  left.json  right.json
assets/tilemaps/: arena.tmx  castle.tmx  poke.tmx
include/: asset_manager.hpp  battle_controller.hpp  battle_scene.hpp  character.hpp  collision_detector.hpp  drawable.hpp  game.hpp  game_camera.hpp  game_scene.hpp  main_menu_scene.hpp  npc.hpp  player.hpp  quit_scene.hpp  scene.hpp  scene_manager.hpp  settings_scene.hpp  sprite_animation.hpp  tile_entity.hpp  tile_map.hpp
media/: demo.webm
src/: asset_manager.cpp  battle_controller.cpp  battle_scene.cpp  character.cpp  collision_detector.cpp  game.cpp  game_camera.cpp  game_scene.cpp  main.cpp  main_menu_scene.cpp  npc.cpp  player.cpp  quit_scene.cpp  scene.cpp  scene_manager.cpp  settings_scene.cpp  sprite_animation.cpp  tile_entity.cpp  tile_map.cpp
